--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,7 @@ html {
     color: #333745;
     user-select: none;
     text-align: center;
+    transition: 0.2s;
 }
 
 body::-webkit-scrollbar {
@@ -33,10 +34,8 @@ h1 {
 
 .container {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2rem;
-    width: 80% !important;
+    margin: 2rem auto 0 auto;
+    width: 80%;
 }
 
 .btnAdd {
@@ -46,9 +45,7 @@ h1 {
     border-radius: 0.25rem;
     border: 0;
     cursor: pointer;
-    transition: 0.2s;
-    margin-left: 1.5rem;
-    margin-top: 1rem;
+    margin: 1rem 0 0 1.5rem;
 }
 
 .btnAdd:hover {
@@ -66,6 +63,7 @@ h1 {
     width: 80%;
     padding: 0.25rem;
     font-size: 1rem;
+    transition: 0s;
 }
 
 .inputToDo:focus {
@@ -90,7 +88,6 @@ h1 {
 
 .notCompletedToDos, .completedToDos {
     padding: 0.5rem;
-    transition: 0.2s;
 }
 
 .completedToDos .todoContent {
