--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,6 +32,11 @@ h1 {
     text-align: left;
 }
 
+h6 {
+    font-size: 0.75rem;
+    margin: 0;
+}
+
 .container {
     display: block;
     margin: 2rem auto 0 auto;
@@ -137,4 +142,21 @@ h1 {
 
 .todoContent:focus+.btnSave {
     font-size: 0.75rem;
+}
+
+.notFoundContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+}
+
+.notFound {
+    font-size: 4rem;
+    margin: 0;
+}
+
+.goHome:hover {
+    font-size: 2rem;
 }
